# agepoyo

./: .gitignore  README.md  adr.md  buf.gen.yaml  buf.yaml  designdoc.md  mypy.ini  pyproject.toml
app/: .env.example  main.py
app/controllers/: agepoyo_service_impl.py  server.py
app/di/: application.py
app/di/use_cases/: converse_use_case_container.py
app/domains/: __init__.py
app/domains/conversation/: __init__.py  agent_client.py  agent_interface.py  llm_model.py  message.py  request.py  response.py  role.py
app/infrastructures/clients/: adk_client_impl.py  agent_client.py  test_client_impl.py
app/tests/e2e/: __init__.py  test_converse.py
app/use_cases/: converse_use_case.py  converse_with_agent_use_case.py
schema/: agepoyo.proto  schema.proto
