[project]
name = "agepoyo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.46.0",
    "google-adk>=0.5.0",
    "grpcio>=1.71.0",
    "litellm>=1.70.0",
    "protobuf>=6.31.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]

[tool.ruff]
exclude = ['app/gen']
line-length = 88
[tool.ruff.lint]
select = ['ALL']
ignore = ['D100', 'D104', 'ANN401', 'S101', 'S311', 'PLR0913', 'PLR2004', 'D203', 'D212', 'Q000', 'Q003', 'COM812', 'FIX002', 'TD002', 'TD003']
[tool.ruff.format]
quote-style = 'single'
