[project]
name = "agepoyo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.46.0",
    "google-adk>=0.5.0",
    "grpcio>=1.71.0",
    "litellm>=1.70.0",
    "protobuf>=6.31.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "app.main",
    "app.gen.*",
    "app.tests.*"
]
ignore_errors = true

